--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
 PORT = 2222
-DB_STRING = mongodb+srv://tzon1s:fYBwyDgyZHPhfuMJ@cluster0.zrsgo65.mongodb.net/?retryWrites=true&w=majority
-CLOUD_NAME = df2m4zrrp
-API_KEY = 479475871314572
-API_SECRET = O4jxt75ZNFuVckuPMa50A-T7mfk
+DB_STRING = 
+CLOUD_NAME = 
+API_KEY = 
+API_SECRET = 
